--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>雙生紫焰影片字幕搜尋</title>
+  <title>雙生紫焰影片字幕搜尋 V2.0版</title>
   <style>
     body {
       margin: 0;
