Fix 修正 調整搜尋功能及表單提交方式
- 在 main.py 中更新了搜尋功能，現在支援 GET 方法
- 在 index.html 中修改了表單提交方式為 GET 请求

--- a/template/index.html
+++ b/template/index.html
@@ -143,8 +143,8 @@
 </head>
 <body>
   <h1>雙生紫焰影片字幕搜尋</h1>
-  <form method="POST" action="/">
-    <input type="text" name="word" placeholder="請輸入搜尋關鍵字" required>
+  <form method="GET" action="/search">
+    <input type="text" name="q" placeholder="請輸入搜尋關鍵字" required>
     <button type="submit">搜尋</button>
   </form>
   <ul>
